[gd_scene load_steps=15 format=3 uid="uid://5olxsyfykkkc"]

[ext_resource type="Script" path="res://Zipline.gd" id="1_6mcrs"]
[ext_resource type="Texture2D" uid="uid://cjypsgxb28ugi" path="res://SonicMarsh/ziphook - sonic and marsh-1.png.png" id="2_dqeeo"]
[ext_resource type="Texture2D" uid="uid://dbmtetpgj4u7c" path="res://SonicMarsh/marshlift (sonic and marsh, 50x52).png" id="3_t0dnp"]
[ext_resource type="Texture2D" uid="uid://ds3g65a1htnk0" path="res://SonicMarsh/soniclift (sonic and marsh, 50x52) (1).png" id="4_hg0el"]

[sub_resource type="Curve2D" id="Curve2D_48fq5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uu1gd"]
size = Vector2(30, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_aggf0"]
atlas = ExtResource("3_t0dnp")
region = Rect2(0, 52, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_67yti"]
atlas = ExtResource("3_t0dnp")
region = Rect2(50, 52, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_e60ba"]
atlas = ExtResource("4_hg0el")
region = Rect2(0, 52, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yjx5"]
atlas = ExtResource("3_t0dnp")
region = Rect2(0, 0, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ows00"]
atlas = ExtResource("3_t0dnp")
region = Rect2(50, 0, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kukra"]
atlas = ExtResource("4_hg0el")
region = Rect2(0, 0, 50, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_vle36"]
atlas = ExtResource("4_hg0el")
region = Rect2(50, 0, 50, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_2barx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aggf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67yti")
}],
"loop": true,
"name": &"hang",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e60ba")
}],
"loop": true,
"name": &"hang2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yjx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ows00")
}],
"loop": false,
"name": &"hangtransition",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kukra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vle36")
}],
"loop": false,
"name": &"hangtransition2",
"speed": 6.0
}]

[node name="Zipline" type="Node2D"]
position = Vector2(1372, 47)
script = ExtResource("1_6mcrs")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_48fq5")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(27, 15)
rotates = false

[node name="Ziphook" type="Sprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(0, -1)
texture = ExtResource("2_dqeeo")
offset = Vector2(0, 18)

[node name="ZipStart" type="Area2D" parent="Path2D/PathFollow2D/Ziphook"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Ziphook/ZipStart"]
position = Vector2(1, 31)
shape = SubResource("RectangleShape2D_uu1gd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Path2D/PathFollow2D/Ziphook"]
visible = false
position = Vector2(2, 50)
sprite_frames = SubResource("SpriteFrames_2barx")
animation = &"hangtransition2"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D/Ziphook/AnimatedSprite2D"]
update_position = false
update_rotation = false
update_scale = false

[node name="_Timer_30983" type="Timer" parent="Path2D/PathFollow2D"]
wait_time = 0.2
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(648.779, 323.312)
rotation = 0.471239

[connection signal="body_entered" from="Path2D/PathFollow2D/Ziphook/ZipStart" to="." method="_on_zip_start_body_entered"]
[connection signal="animation_finished" from="Path2D/PathFollow2D/Ziphook/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
